--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"sharp": "^0.31.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-grid-responsive": "^1.2.4",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.0"
+		"vanilla-lazyload": "^17.8.3",
+		"vite": "^3.0.0",
+		"vite-imagetools": "^4.0.9"
 	},
 	"type": "module",
 	"dependencies": {
@@ -33,7 +36,6 @@
 		"@sveltejs/adapter-static": "^1.0.0-next.38",
 		"svelte-collapsible": "^0.2.1",
 		"svelte-i18n": "^3.4.0",
-		"svelte-image-gallery": "^1.5.0",
 		"svelte-modals": "^1.1.0"
 	}
 }
